<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@color/grey"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Log in your \n account"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/dark_red" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_white"
            android:hint="@string/email"
            android:padding="10dp"
            android:id="@+id/edt_email"
            android:layout_margin="10dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_white"
            android:hint="@string/password"
            android:padding="10dp"
            android:id="@+id/edt_password"
            android:layout_margin="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:padding="6dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:id="@+id/btnLogin"
            android:background="@drawable/rounded_corner_btn_red"
            android:text="@string/login"
            android:layout_height="wrap_content"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:gravity="center">
    <TextView
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:text="Don't have an account ? "
        android:textSize="18sp"
        android:textColor="@color/black" />
    <TextView
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginLeft="8dp"
        android:textAlignment="center"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:id="@+id/btnRegister"
        android:textColor="@color/red" />
</LinearLayout>

</RelativeLayout>