<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_gravity="center">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/intro"
        android:scaleType="fitCenter"
        android:layout_marginBottom="230dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_page_title"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_page_description"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/rounded_corner_white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/intro_btn_get_started"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>