<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:id="@+id/account_btngroup"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/tv_cancel"
            android:layout_margin="15dp"
            android:text="Cancel"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_margin="15dp"
            android:id="@+id/tv_save"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:text="Save"
            android:textSize="20sp"/>
    </RelativeLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="5dp"
            android:layout_marginBottom="90dp"
            android:layout_toRightOf="@+id/img_profile"
            android:background="@drawable/circle_background_white"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_profile"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="User Name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/username"
        android:padding="10dp"
        android:id="@+id/etUserName"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Email"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/password"
        android:padding="10dp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Phone"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/phone"
        android:padding="10dp"
        android:id="@+id/etPhone"
        android:inputType="phone"
        android:layout_margin="10dp"/>
</LinearLayout>